# MWC

./: README.md  meson.build  shell.nix
src/: Client.h  Compositor.cpp  Compositor.h  Output.cpp  Output.h  SessionLockManager.cpp  SessionLockManager.h  Surface.cpp  Surface.h  main.cpp
src/input/: Clipboard.cpp  Clipboard.h  DND.cpp  DND.h  Keyboard.cpp  Keyboard.h  Pointer.cpp  Pointer.h  Seat.cpp  Seat.h  Touch.cpp  Touch.h
src/roles/: CursorRole.h  DNDIconRole.h  LayerRole.h  PopupRole.h  SessionLockRole.h  SubsurfaceRole.h  ToplevelRole.cpp  ToplevelRole.h
src/scene/: LayerView.h  Scene.cpp  Scene.h  SurfaceView.cpp  SurfaceView.h
src/utils/: Global.cpp  Global.h  Settings.h
